--- a/index.html
+++ b/index.html
@@ -128,6 +128,10 @@ uniform vec4 params1;
 uniform vec4 params2;
 #define friction params2.y
 
+uniform vec4 params3;
+#define interactionSpherePos params3.xyz
+#define interactionSphereRadius params3.w
+
 uniform vec3 gravity;
 uniform vec3 cellSize;
 uniform vec3 gridPos;
@@ -168,10 +172,11 @@ void main() {
                         float len = length(r);
                         if(len > 0.0 && len < radius * 2.0){
                             vec3 dir = normalize(r);
-                            force -= stiffness * (len - 2.0 * radius) * dir + damping * dot(velocity, dir) * dir;
+                            vec3 relVel = velocity - neighborVelocity;
+
+                            force -= stiffness * (len - 2.0 * radius) * dir + damping * dot(relVel, dir) * dir;
 
                             // Compute shear (tangential) force - this won't make sense until bodies are implemented
-                            vec3 relVel = velocity - neighborVelocity;
                             vec3 relTangentVel = relVel - dot(relVel, dir) * dir;
                             //force -= friction * relTangentVel;
                         }
@@ -183,13 +188,25 @@ void main() {
 
     // Apply force from ground / bounds
     vec3 boxMin = vec3(0.3);
-    vec3 boxMax = vec3(0.7);
+    vec3 boxMax = vec3(0.7,100.0,0.7);
     vec3 x = position - radius;
-    vec3 f = - stiffness * (x - boxMin) - damping * velocity;
+    vec3 relVel = velocity - vec3(0);
+    vec3 f = - stiffness * (x - boxMin) - damping * relVel;
     force += step(x, boxMin) * f;
     x = position + radius;
-    f = - stiffness * (x - boxMax) - damping * velocity;
+    f = - stiffness * (x - boxMax) - damping * relVel;
     force += step(boxMax, x) * f;
+
+    // fountain test
+    //force.y += smoothstep(0.0, length(position-vec3(0.5,0.35,0.5)), 0.002)*100.0;
+
+    // Sphere interaction
+    vec3 r = position - interactionSpherePos;
+    float len = length(r);
+    if(len > 0.0 && len < interactionSphereRadius+radius){
+        vec3 dir = normalize(r);
+        force -= stiffness * (len - (interactionSphereRadius+radius)) * dir + damping * dot(velocity, dir) * dir;
+    }
 
     // "Air friction" / drag force
     force -= drag * velocity;
@@ -349,6 +366,7 @@ void main() {
 
 
 <script src="three.orbitcontrols.js"></script>
+<script src="three.transformcontrols.js"></script>
 <script src="main.js"></script>
 </body>
 </html>
