torque and stuff

--- a/index.html
+++ b/index.html
@@ -214,6 +214,88 @@ void main() {
     gl_FragColor = vec4(force, 0.0);
 }
 </script>
+
+<script id="updateTorqueFrag" type="x-shader/x-fragment">
+uniform vec4 params1;
+#define stiffness params1.x
+#define damping params1.y
+#define radius params1.z
+#define drag params1.w
+uniform vec4 params2;
+#define friction params2.y
+
+uniform vec3 cellSize;
+uniform vec3 gridPos;
+
+uniform sampler2D posTex;
+uniform sampler2D velTex;
+uniform sampler2D angularVelTex;
+uniform sampler2D gridTex;
+
+void main() {
+    vec2 uv = gl_FragCoord.xy / resolution;
+    int particleIndex = uvToIndex(uv, resolution);
+
+    // Get id and position of current
+    vec3 position = texture2D(posTex, uv).xyz;
+    vec3 velocity = texture2D(velTex, uv).xyz;
+    vec3 angularVelocity = texture2D(angularVelTex, uv).xyz;
+    vec3 particleGridPos = worldPosToGridPos(position, gridPos, cellSize);
+    ivec3 iGridRes = ivec3(gridResolution);
+    vec2 gridTexRes = 2.0 * gridResolution.xy * vec2(gridPotZ);
+
+    vec3 torque = vec3(0);
+
+    // Neighbor friction
+    for(int i=-1; i<2; i++){
+        for(int j=-1; j<2; j++){
+            for(int k=-1; k<2; k++){
+                vec3 neighborCellGridPos = particleGridPos + vec3(i,j,k);
+                ivec3 iNeighborCellGridPos = ivec3(particleGridPos) + ivec3(i,j,k);
+                for(int l=0; l<4; l++){
+                    vec2 neighborCellTexUV = gridPosToGridUV2(neighborCellGridPos, l, gridResolution);
+                    neighborCellTexUV += vec2(0.5) / (2.0 * gridTexRes); // center to "cell pixel"
+                    int neighborIndex = int(floor(texture2D(gridTex, neighborCellTexUV).x-1.0 + 0.5)); // indices are stored incremented by 1
+                    vec2 neighborUV = indexToUV(float(neighborIndex), resolution);
+                    vec3 neighborPosition = texture2D(posTex, neighborUV).xyz;
+                    vec3 neighborVelocity = texture2D(velTex, neighborUV).xyz;
+                    vec3 neighborAngularVelocity = texture2D(angularVelTex, neighborUV).xyz;
+                    if(neighborIndex >=0 && neighborIndex != particleIndex && iNeighborCellGridPos.x>=0 && iNeighborCellGridPos.y>=0 && iNeighborCellGridPos.z>=0 && iNeighborCellGridPos.x<iGridRes.x && iNeighborCellGridPos.y<iGridRes.y && iNeighborCellGridPos.z<iGridRes.z){ // Not self!
+                        // Apply contact force from neighbor
+                        vec3 r = position - neighborPosition;
+                        float len = length(r);
+                        if(len > 0.0 && len < radius * 2.0){
+                            vec3 dir = normalize(r);
+                            vec3 relVel = velocity - neighborVelocity;
+                            vec3 relAngularVel = angularVelocity - neighborAngularVelocity;
+
+                            // Compute shear (tangential) force - this won't make sense until bodies are implemented
+                            vec3 relTangentVel = relVel - dot(relVel, dir) * dir + cross(radius*dir, relAngularVel);
+                            torque += damping * cross(radius*dir, relTangentVel);
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    // Reduce rotation
+    torque -= damping * angularVelocity; // TODO: dont use same as contact
+
+    // Apply torque from ground / bounds
+    /*vec3 boxMin = vec3(0.3);
+    vec3 boxMax = vec3(0.7,100.0,0.7);
+    vec3 x = position - radius;
+    vec3 relVel = velocity - vec3(0);
+    vec3 f = - stiffness * (x - boxMin) - damping * relVel;
+    force += step(x, boxMin) * f;
+    x = position + radius;
+    f = - stiffness * (x - boxMax) - damping * relVel;
+    force += step(boxMax, x) * f;*/
+
+    gl_FragColor = vec4(torque, 0.0);
+}
+</script>
 <script id="updateVelocityFrag" type="x-shader/x-fragment">
 // Should be possible to use for both angular and linear velocity
 uniform sampler2D velTex;
