--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <div id="container"></div>
 <script src="three.min.js"></script>
+<script src="stats.min.js"></script>
+<script src="dat.gui.min.js"></script>
 
 <script id="sharedShaderCode" type="x-shader/x-fragment">
 precision highp float;
